--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
 		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
 	},
 	"type": "module",
-	"keywords": ["gql", "mern" , "expense-tracker","expense-ease"],
+	"keywords": [
+		"gql",
+		"mern",
+		"expense-tracker",
+		"expense-ease"
+	],
 	"author": "Neharika Rout",
 	"license": "ISC",
 	"dependencies": {
@@ -17,6 +22,7 @@
 		"@graphql-tools/merge": "^9.0.3",
 		"bcryptjs": "^2.4.3",
 		"connect-mongodb-session": "^5.0.0",
+		"cors": "^2.8.5",
 		"cron": "^3.1.6",
 		"dotenv": "^16.4.5",
 		"express": "^4.18.2",
